--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "wishanddell/craft-glide",
   "description": "Adds on-demand image transform support to Craft using Glide",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "type": "craft-plugin",
   "require": {
     "craftcms/cms": "^5.0.0",
@@ -13,7 +13,7 @@
     }
   },
   "extra": {
-    "handle": "glide",
+    "handle": "glide2",
     "name": "Glide Image Transforms",
     "developer": "Wish & Dell",
     "developerUrl": "https://www.wishanddell.co.uk"
