--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
   "name": "wishanddell/craft-glide",
   "description": "Adds on-demand image transform support to Craft using Glide",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "type": "craft-plugin",
   "require": {
     "craftcms/cms": "^5.0.0",
-    "league/glide": "^2.3.0"
+    "league/glide": "^3.0.0",
+    "league/flysystem": "^3.0.0"
   },
   "autoload": {
     "psr-4": {
